--- a/practicehtml.html
+++ b/practicehtml.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>This is my personal project for practice</title>
+        <title>Cigar Buds</title>
     </head>
+    <body>
+        <img src="images/cigarbuds.JPG" alt="Cigar Buddies" title="cigar buddies" height="300" width="400"/>
+    </body>
     
 
 </html>
