--- a/practicehtml.html
+++ b/practicehtml.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <img src="images/cigarbuds.JPG" alt="Cigar Buddies" title="cigar buddies" height="300" width="400"/>
+        <p>This is a photo of my friend Jordan and I smoking cigars together.
+
+        </p>
     </body>
     
 
